<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information"
        style="@style/InfoTextViewStyle"
        android:layout_margin="16dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/colorPrimary"
        />
    <TextView
        android:id="@+id/title_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InfoTextViewStyle"
        android:textAppearance="@style/InfoTitleAppearance"
        android:text="@string/info_title_name"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InfoTextViewStyle"
        android:textAppearance="@style/InfoTextAppearance"
        />
    <TextView
        android:id="@+id/title_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InfoTextViewStyle"
        android:textAppearance="@style/InfoTitleAppearance"
        android:text="@string/info_title_size"
        />
    <TextView
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InfoTextViewStyle"
        android:textAppearance="@style/InfoTextAppearance"
        />
    <TextView
        android:id="@+id/title_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InfoTextViewStyle"
        android:textAppearance="@style/InfoTitleAppearance"
        android:text="@string/info_title_created"
        />
    <TextView
        android:id="@+id/created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InfoTextViewStyle"
        android:textAppearance="@style/InfoTextAppearance"
        />
<Button
    android:id="@+id/close"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/info_dialog_close"
    android:layout_gravity="center_horizontal"
    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
    />
</LinearLayout>